Better mobile image sizes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       body {
         background: #ccffff;
         text-align: center;
+        overflow-x: hidden;
       }
       img {
         display: inline-block;
-        height: 100vh;
         margin: 0;
+        max-width: 100%;
       }
     </style>
 </head>
