Updated styles and header font

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <style>
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        font-size: 72px;
+      }
       body {
-        background: #ccffff;
+        background: #000;
         text-align: center;
         overflow-x: hidden;
       }
