Added seo and meta tag info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <title>New York City June 2022</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <meta name="description" content="Pictures from Zachary Tyhacz's trip to New York City June 2022">
+    <meta name="keywords" content="new york city, new, york, city, manhattan, empire state building, penn, station, penn, station, subway, nyc, ny, little italy, brooklyn, queens, museum">
+    <meta name="author" content="Zachary Tyhacz">
+    <meta property="og:site_name" content="Zac's Trip to NYC" >
+    <meta name="twitter:domain" property="twitter:domain" content="nyc.tyhacz.com">
+    <meta name="og:title" property="og:title" content="Zac's Trip to NYC" >
+    <meta name="twitter:title" property="twitter:title" content="Zac's Trip To NYC">
+    <meta property="og:description" content="Pictures from Zachary Tyhacz's trip to NYC. Empire state building, downtown, subway, Little Italy, and more.">
+    <meta name="twitter:description" property="twitter:description" content="Pictures from Zachary Tyhacz's trip to NYC. Empire state building, downtown, subway, Little Italy, and more.">
+    <meta property="og:image" content="https://nyc.tyhacz.com/thumbnail.jpg" >
+    <meta property="twitter:card" content="https://nyc.tyhacz.com/thumbnail.jpg">
+    <meta name="twitter:image:src" property="twitter:image:src" content="https://nyc.tyhacz.com/thumbnail.jpg">
+    <meta name="twitter:image" property="twitter:image" content="https://nyc.tyhacz.com/thumbnail.jpg">
+    <meta name="og:image:alt" property="og:image:alt" content="Zac's Trip to NYC" >
+    <meta property="og:url" content="https://nyc.tyhacz.com" >
+    <meta property="og:type" content="website">
     <style>
       h1 {
         font-family: Arial, Helvetica, sans-serif;
