--- a/index.html
+++ b/index.html
@@ -51,9 +51,16 @@
         overflow-x: hidden;
       }
       img {
-        display: inline-block;
-        margin: 0;
-        max-width: 100%;
+        display: block;
+        margin: auto;
+        height: 100vh
+      }
+      @media only screen and (max-width: 1100px) {
+        img {
+          display: inline-block;
+          max-width: 100%;
+          height: auto;
+        }
       }
     </style>
 </head>
