Added images from Coney Island

--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
   <h1>
     New York City - June 2022
   </h1>
+  <img src="/images/20220628_122042.jpg" loading="lazy" />
+  <img src="/images/20220628_122122.jpg" loading="lazy" />
+  <img src="/images/20220628_123133.jpg" loading="lazy" /> 
+  <img src="/images/20220628_124459.jpg" loading="lazy" /> 
+  <img src="/images/20220628_131802.jpg" loading="lazy" /> 
+  <img src="/images/20220628_132148.jpg" loading="lazy" /> 
+  <img src="/images/20220628_132509.jpg" loading="lazy" /> 
+  <img src="/images/20220628_132916.jpg" loading="lazy" /> 
+  <img src="/images/20220628_133005.jpg" loading="lazy" /> 
+  <img src="/images/20220628_144421.jpg" loading="lazy" /> 
+  <img src="/images/20220628_150231.jpg" loading="lazy" /> 
+  <img src="/images/20220628_150335.jpg" loading="lazy" /> 
+  <img src="/images/20220628_151547.jpg" loading="lazy" /> 
+  <img src="/images/20220628_151803.jpg" loading="lazy" /> 
+  <img src="/images/20220628_154925.jpg" loading="lazy" /> 
+  <img src="/images/20220628_163423.jpg" loading="lazy" /> 
+  <img src="/images/20220628_171326.jpg" loading="lazy" /> 
+  <img src="/images/20220628_171327.jpg" loading="lazy" /> 
+  <img src="/images/20220628_171337.jpg" loading="lazy" /> 
+  <img src="/images/20220628_171505.jpg" loading="lazy" /> 
+  <img src="/images/20220630_073547.jpg" loading="lazy" /> 
+  <img src="/images/20220630_073552.jpg" loading="lazy" /> 
+  <img src="/images/20220630_073843.jpg" loading="lazy" /> 
   <img src="/images/20220624_102046.jpg" loading="lazy" />
   <img src="/images/20220624_102116.jpg" loading="lazy" />
   <img src="/images/20220624_102131.jpg" loading="lazy" />
